[package]
name = "book-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
json = "0.12.4"
serde = { version = "1.0.104", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime

[dependencies.rocket]
version = "0.5.0-rc.2"
default-features = false
features = ["json"]